# UnitConverter

./: CMakeLists.txt  README.md  main.cpp
Converters/: arie.cpp  arie.h  consum_combustibil.cpp  consum_combustibil.h  densitate.cpp  densitate.h  energie.cpp  energie.h  lungime.cpp  lungime.h  masa.cpp  masa.h  presiune.cpp  presiune.h  temperatura.cpp  temperatura.h  timp.cpp  timp.h  viteza.cpp  viteza.h  volum.cpp  volum.h
Utils/: global.cpp  global.h  utilities.cpp  utilities.h
